<resources>
    <!-- GENERIC -->
    <string name="app_name">TwinCoach</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="error_message">Something went wrong. Please try again</string>
    <string name="goal">Goal</string>
    <string name="next_training_session">Next training session</string>
    <string name="save">Save</string>

    <!-- ERROR -->
    <string name="server_error">Server error. Wait a minute and please try again</string>
    <string name="bad_request_error">Bad request error. Please try again</string>
    <string name="unknown_error">Unknown error. Please try again</string>
    <string name="no_internet_error">No internet connection. Please check your connection and try again</string>

    <!-- HOME FRAGMENT-->
    <string name="title_home">Home</string>
    <string name="permissions_alert_dialog">If the application hasn\'t got the required permissions granted it won\'t be able to read data and generate the training plan. Do you want to grant those permissions?</string>
    <string name="goal_card_empty_state">There is no information related to the goal. Please tap here to set a new goal</string>
    <string name="training_card_empty_state">There are not any suggested training sessions</string>
    <string name="info_card_empty_state">There is no information about you. Please tap here to complete your profile</string>
    <string name="fatigue_card_empty_state">There is no information about fatigue</string>
    <string name="health_connect_error">An error occurred while updating our data with Health Connect</string>
    <string name="health_connect_sync_finished">Data has been synchronized successfully! Changes may take a while to appear</string>

    <!-- LOGIN FRAGMENT -->
    <string name="login_button">Login with Google</string>

    <!-- SESSIONS FRAGMENT -->
    <string name="title_sessions">Sessions</string>
    <string name="list_tab">List</string>
    <string name="calendar_tab">Calendar</string>

    <!-- SESSIONS LIST FRAGMENT -->
    <string name="sessions_list_empty_state">Sorry. There are no training sessions available</string>

    <!-- SESSIONS CALENDAR FRAGMENT -->

    <!-- COMPLETED SESSIONS INFO FRAGMENT -->
    <string name="title_completed_session">Session Information</string>
    <string name="zone1">Zone 1</string>
    <string name="zone2">Zone 2</string>
    <string name="zone3">Zone 3</string>
    <string name="zoneRest">Rest</string>
    <string name="column1_header">Distance</string>
    <string name="column2_header">Time</string>
    <string name="column3_header">Pace</string>

    <!-- SUGGESTED SESSIONS INFO FRAGMENT -->
    <string name="title_suggested_session">Session Information</string>
    <string name="warmup_title">Warmup</string>
    <string name="warmup_description">Warmup 3 km at a comfortable pace (you should be able to maintain a conversation while running)</string>
    <string name="stretching_title">Stretching</string>
    <string name="stretching_before_description">Follow a stretching routine before starting with the session</string>
    <string name="stretching_after_description">Follow a stretching routine to prevent injuries and to let the body recover from the exercise</string>
    <string name="cooldown_title">Cooldown</string>
    <string name="cooldown_description">Run 2 km as slow as you need to recover from the exercise</string>
    <string name="rest_title">Rest</string>
    <string name="rest_description_1">Stop running for</string>
    <string name="rest_description_2">Try to breathe as deep as possible to increase the recovery</string>
    <string name="run_title">Run</string>
    <string name="run_description_1">Run</string>
    <string name="run_description_2">in</string>
    <string name="run_description_3">If you think you should be running faster or slower, do it. This is just indicative</string>

    <!-- SETTINGS FRAGMENT-->
    <string name="title_settings">Settings</string>
    <string name="delete_account">Delete account</string>
    <string name="logout">Logout</string>
    <string name="logout_warning_dialog">Are you sure you want to logout?</string>
    <string name="delete_account_warning_dialog">Are you sure you want to delete your account? This action will be definitive and will delete all the information</string>
    <string name="change_goal">Change goal</string>
    <string name="change_personal_information">Change personal information</string>
    <string name="user_preferences">User preferences</string>

    <!-- FATIGUE -->
    <string name="extreme_fatigue">You look extremely tired!\nRest is recommended</string>

    <!-- PROGRESSION FRAGMENT -->
    <string name="title_progression">Progression</string>
    <string name="progression_empty_state">Sorry. There are no predictions available already. Please try again.</string>
    <string name="current_estimation">Current Estimation</string>
    <string name="suggestions">Suggestions</string>
    <string name="estimation_part_1">for</string>
    <string name="goal_date_part_1">You are expected to reach your goal on</string>
    <string name="smaller_goal_1">You are not expected to reach the goal before the raceday. Would you like to change your goal to</string>
    <string name="smaller_goal_2">for</string>
    <string name="bigger_goal_1">You are expected to reach the goal before the raceday. Would you like to change your goal to</string>
    <string name="bigger_goal_2">for</string>
    <string name="less_training_days_1">You are expected to reach the goal before the raceday. Would you like to reduce the number of training days per week to</string>
    <string name="less_training_days_2">days?</string>
    <string name="more_training_days_1">You are not expected to reach the goal before the raceday. Would you like to increase the number of training days per week to</string>
    <string name="more_training_days_2">days?</string>
    <string name="put_features_success">User information have been updated successfully!</string>

    <!-- GOAL DIALOG FRAGMENT -->
    <string name="goal_information">Goal Information</string>
    <string name="goal_time">Time</string>
    <string name="goal_length">Length</string>
    <string name="goal_date">Date</string>
    <string name="hours_symbol">h</string>
    <string name="minutes_symbol">min</string>
    <string name="seconds_symbol">sec</string>
    <string name="time_separator">:</string>
    <string name="meters_symbol">m</string>
    <string name="distance_hint">Distance</string>
    <string name="date_button_text">Select a date</string>
    <string name="put_goal_success">Goal have been updated successfully!</string>
    <string name="form_not_completed">The form is not fully completed. Please completed the fields in red and try again</string>
    <string name="select_date">Please select a date</string>

    <!-- PERSONAL INFORMATION DIALOG FRAGMENT -->
    <string name="personal_information">Personal Information</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="birthdate">Birthdate</string>
    <string name="running_date">Running Date</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender_fluid">Gender Fluid</string>
    <string name="non_binary">Non binary</string>
    <string name="dont_know">NR/DK</string>
    <string name="centimeters_symbol">cm</string>
    <string name="kilogram_symbol">kg</string>
    <string name="put_personal_information_success">Personal information have been updated successfully!</string>

    <!-- USER PREFERENCES DIALOG FRAGMENT -->
    <string name="user_preferences_title">User Preferences</string>
    <string name="training_days">Preferred weekly training days</string>
    <string name="monday_initial">M</string>
    <string name="monday">Monday</string>
    <string name="tuesday_initial">T</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday_initial">W</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday_initial">T</string>
    <string name="thursday">Thursday</string>
    <string name="friday_initial">F</string>
    <string name="friday">Friday</string>
    <string name="saturday_initial">S</string>
    <string name="saturday">Saturday</string>
    <string name="sunday_initial">S</string>
    <string name="sunday">Sunday</string>
    <string name="put_preferences_success">Preferences have been updated successfully!</string>
    <string name="no_training_days_selected_error">Please select at least one training day please</string>

    <!-- FIRST STEP -->
    <string name="welcome">Welcome to TwinCoach!</string>
    <string name="first_step_description">First of all, we need you to configure a few things.\nTo use this application we need to be able to read your training sessions from Healt Connect. Please check if you have Health Connect installed in your device.\nOnce you are sure you have installed Health Connect you can continue.</string>
    <string name="play_store">Play Store</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="finish">Finish</string>
    <string name="sdk_not_supported">Health Connect is not available on your device. We are sorry</string>
    <string name="health_connect_installed">Health Connect is already installed in your device!</string>

    <!-- SECOND STEP -->
    <string name="permissions">Permissions</string>
    <string name="second_step_description">Now that you have installed Health Connect please make sure you are syncronizing your training sessions with it.\nClick on the following button to grant permission to the application you usually use (e.g. Samsung Health, COROS…) to write data into Health Connect.\nAlso you have to grant read permission to TwinCoach, in order to take your data from Health Connect.</string>
    <string name="grant_permission">You need to grant permission to TwinCoach to be able to read your data. Thank you!</string>

    <!-- THIRD STEP -->
    <string name="third_step_description">We are almost done now!\nJust please complete the following information. We need this information to create a customized training plan for each one of our athletes.</string>
    <string name="training_goal">Training Goal</string>
    <string name="introduce_data">Please introduce the requested data. It is necessary to build a customized training plan</string>
</resources>