<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.userPreferences.UserPreferencesDialogFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clPreferences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:text="@string/user_preferences_title"
            android:textColor="?attr/colorOnSecondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTrainingDays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:text="@string/training_days"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <LinearLayout
            android:id="@+id/clWeekdaysPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTrainingDays">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/day_monday"
                style="@style/Widget.ToggleCircular.Mixed"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="@string/monday_initial"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent" />


            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/day_tuesday"
                style="@style/Widget.ToggleCircular.Mixed"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:text="@string/tuesday_initial"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/day_wednesday"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toEndOf="@+id/day_monday"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/day_wednesday"
                style="@style/Widget.ToggleCircular.Mixed"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:text="@string/wednesday_initial"
                app:layout_constraintEnd_toStartOf="@+id/day_thursday"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toEndOf="@+id/day_tuesday" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/day_thursday"
                style="@style/Widget.ToggleCircular.Mixed"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:text="@string/thursday_initial"
                app:layout_constraintEnd_toStartOf="@+id/day_friday"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toEndOf="@+id/day_wednesday" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/day_friday"
                style="@style/Widget.ToggleCircular.Mixed"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:text="@string/friday_initial"
                app:layout_constraintEnd_toStartOf="@+id/day_saturday"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toEndOf="@+id/day_thursday" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/day_saturday"
                style="@style/Widget.ToggleCircular.Mixed"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:text="@string/saturday_initial"
                app:layout_constraintEnd_toStartOf="@+id/day_sunday"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toEndOf="@+id/day_friday" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/day_sunday"
                style="@style/Widget.ToggleCircular.Mixed"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:text="@string/sunday_initial"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toEndOf="@+id/day_saturday" />

        </LinearLayout>

        <Button
            android:id="@+id/btnCancel"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnSave" />

        <Button
            android:id="@+id/btnSave"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clWeekdaysPicker" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>