<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.goal.GoalDialogFragment">

        <TextView
            style="@style/TitleText"
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goal_information"
            android:layout_margin="@dimen/activity_vertical_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivTime"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:src="@drawable/timer_svgrepo_com"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"/>

        <LinearLayout
            android:id="@+id/llTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            app:layout_constraintBottom_toBottomOf="@+id/ivTime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivTime"
            app:layout_constraintTop_toTopOf="@+id/ivTime">

            <EditText
                android:id="@+id/etHours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="2"
                android:hint="@string/hours_symbol"
                android:inputType="numberSigned"
                app:layout_constraintStart_toEndOf="@+id/ivTime"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                android:backgroundTint="@color/grey"
                android:textColorHint="@color/soft_grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_separator" />

            <EditText
                android:id="@+id/etMinutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="2"
                android:hint="@string/minutes_symbol"
                android:inputType="numberSigned"
                app:layout_constraintStart_toEndOf="@+id/ivTime"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                android:backgroundTint="@color/grey"
                android:textColorHint="@color/soft_grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_separator" />

            <EditText
                android:id="@+id/etSeconds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="2"
                android:hint="@string/seconds_symbol"
                android:inputType="numberSigned"
                app:layout_constraintStart_toEndOf="@+id/ivTime"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                android:backgroundTint="@color/grey"
                android:textColorHint="@color/soft_grey" />

        </LinearLayout>

        <ImageView
            android:id="@+id/ivLength"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:src="@drawable/distance_svgrepo_com"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            app:layout_constraintStart_toStartOf="@+id/ivTime"
            app:layout_constraintTop_toBottomOf="@+id/llTime"/>

        <LinearLayout
            android:id="@+id/llLength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            app:layout_constraintBottom_toBottomOf="@+id/ivLength"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivLength"
            app:layout_constraintTop_toTopOf="@+id/ivLength">

            <EditText
                android:id="@+id/etLength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:hint="@string/distance_hint"
                android:inputType="numberSigned"
                app:layout_constraintStart_toEndOf="@+id/ivTime"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                android:backgroundTint="@color/grey"
                android:textColorHint="@color/soft_grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meters_symbol" />

        </LinearLayout>

        <ImageView
            android:id="@+id/ivDate"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:src="@drawable/baseline_calendar_today_24"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            app:layout_constraintStart_toStartOf="@+id/ivLength"
            app:layout_constraintTop_toBottomOf="@+id/llLength"/>

        <Button
            android:id="@+id/btnDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_button_text"
            android:layout_marginHorizontal="50dp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/ivDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivDate"
            app:layout_constraintTop_toTopOf="@+id/ivDate" />

        <!-- TODO: Change buttons for textViews -->

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnSave" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnDate" />

</androidx.constraintlayout.widget.ConstraintLayout>